finaliser la mise en place de translations

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -1,3 +1,5 @@
 {
-    "Actions": "actions"
+    "Campages en cours": "Current campaign",
+    "Session expirée, veuillez vous reconnecter !": "excpired",
+    "Voici les informations de votre Manager :": ""
 }
