--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -1,3 +1,5 @@
 {
-    "Campages en cours": "Campages en cours translated 2ened"
+    "Campages en cours": "Campages en cours",
+    "Session expirée, veuillez vous reconnecter !": "expiré fr",
+    "Voici les informations de votre Manager :": ""
 }
