--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -1,5 +1,4 @@
 {
-    "Campages en cours": "Campages en cours",
-    "Session expirée, veuillez vous reconnecter !": "expiré fr",
-    "Voici les informations de votre Manager :": ""
+    "Bienvenue": "",
+    "Déconnexion": "Déconnexion"
 }
