--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -1,5 +1,4 @@
 {
-    "Campages en cours": "Current campaign",
-    "Session expirée, veuillez vous reconnecter !": "excpired",
-    "Voici les informations de votre Manager :": ""
+    "Bienvenue": "welcome",
+    "Déconnexion": "Logout"
 }
